Add anatole theme.

--- a/_config.yml
+++ b/_config.yml
@@ -96,9 +96,17 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+## theme: landscape
+theme: anatole
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: ''
+
+# For theme: anatole
+archive_generator:
+  per_page: 0
+  yearly: false
+  monthly: false
+  daily: false
